--- a/CycloneStudio/MainWindow.xaml
+++ b/CycloneStudio/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="AppSpace.MainWindow"
+﻿<Window x:Class="CycloneStudio.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AppSpace"        
+        xmlns:local="clr-namespace:CycloneStudio"        
         mc:Ignorable="d"
         Icon="./graphics/icon.ico"
         Title="Cyclone Studio v0.05" Height="550" Width="1000">
