--- a/CycloneStudio/App.xaml
+++ b/CycloneStudio/App.xaml
@@ -4,6 +4,9 @@
              xmlns:local="clr-namespace:CycloneStudio"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="{x:Type MenuItem}">
+            <Setter Property="HorizontalContentAlignment" Value="Left" />
+            <Setter Property="VerticalContentAlignment" Value="Top" />
+        </Style>
     </Application.Resources>
 </Application>
