--- a/CycloneStudio/MainWindow.xaml
+++ b/CycloneStudio/MainWindow.xaml
@@ -49,7 +49,7 @@
 
     <Grid>
         <ScrollViewer Grid.ColumnSpan="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0,30,0,0">
-            <Canvas x:Name="canvas" Height="980" Width="1920" MouseWheel="Canvas_MouseWheel">
+            <Canvas x:Name="canvas" MouseWheel="Canvas_MouseWheel">
                 <Canvas.Background>
                     <DrawingBrush TileMode="Tile" Viewport="-1,-1,20,20" ViewportUnits="Absolute">
                         <DrawingBrush.Drawing>
